--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Nex Blog
 SEOTitle: 柠栀的博客
-header-img: 
+header-img: img/home-bg.jpg
 email: 3180039534@qq.com
 description: "这里是 @柠栀 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
 keyword: "柠栀, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
